syntax = "proto3";

package tweet;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ocionejr/upvote-klever/proto";

message TweetRequest{
  string author_id = 1;
  string message = 2;
}

message TweetResponse {
  string id = 1;
  string author_id = 2;
  string message = 3;
  repeated string upvotes = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message TweetId {
  string id = 1;
}

message UpdateTweetRequest {
  string id = 1;
  string message = 3;
}

service TweetService{
  rpc CreateTweet(TweetRequest) returns (TweetResponse);
  rpc FindTweetById(TweetId) returns (TweetResponse);
  rpc ListTweets (google.protobuf.Empty) returns (stream TweetResponse);
  rpc UpdateTweet (UpdateTweetRequest) returns (google.protobuf.Empty);
}