syntax = "proto3";

package user;

option go_package = "github.com/ocionejr/upvote-klever/proto";

message UserRequest {
  string username = 1;
  string password = 2;
}

message UserId {
  string id = 1;
}

service UserService {
  rpc CreateUser (UserRequest) returns (UserId);
}